# agni-datta.github.io

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  agni-datta.html  dprint.json  index.html  robots.txt  rust-toolchain.toml  styles.css  wrangler.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
content/: miscellany.toml  notes.toml  publications.toml  resources.toml  site.toml
crates/analytics-worker/: Cargo.toml
crates/analytics-worker/src/: lib.rs
crates/browser-tests/: Cargo.toml
crates/browser-tests/src/: lib.rs
crates/browser-tests/tests/: webdriver.rs
crates/sitegen/: Cargo.toml
crates/sitegen/src/: lib.rs  main.rs
crates/webapp/: Cargo.toml
crates/webapp/src/: lib.rs
css/: styles.css
js/: main.js
migrations/: 0001_location_page_views.sql
partials/: about.html  experience.html  publications.html  research.html  talks.html
scripts/: build.sh
sitegen/: Cargo.toml
sitegen/src/: main.rs
static/assets/css/: site.css
static/assets/pdf/: index.html
styles/: components.css  foundation.css  layout.css  responsive.css  tokens.css
templates/: 404.html  base.html  index.html  notes.html  publications.html  resources.html
templates/components/: footer.html  header.html
templates/layouts/: base.html
templates/pages/: home.html  miscellany.html  not-found.html  notes.html  privacy.html  publications.html  resources.html
wasm/: Cargo.toml
wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
