[workspace]
members = [
  "crates/analytics-worker",
  "crates/browser-tests",
  "crates/sitegen",
  "crates/webapp",
  "xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.97.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
