[package]
name = "agni-datta-site-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DomRect",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Location",
  "MediaQueryList",
  "NodeList",
  "ScrollBehavior",
  "ScrollToOptions",
  "Storage",
  "Window"
]
