[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = "1"
serde_json = "1"
sitegen = { path = "../crates/sitegen" }
tiny_http = "0.12"
ureq = { version = "3.3", features = ["json"] }
wasm-bindgen-cli-support = "0.2.126"

[lints]
workspace = true
