[package]
name = "analytics-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
worker = { version = "0.8.5", features = ["d1"] }

[lints]
workspace = true
