[package]
name = "sitegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = "1"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
tera = "2"
thiserror = "2"
toml = "1"

[lints]
workspace = true
