[package]
name = "webapp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lints]
workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DocumentFragment",
  "DomRect",
  "DomParser",
  "Element",
  "Event",
  "EventTarget",
  "FocusOptions",
  "Headers",
  "History",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlDocument",
  "HtmlHeadElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Location",
  "MediaQueryList",
  "MouseEvent",
  "Node",
  "NodeList",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ScrollBehavior",
  "ScrollRestoration",
  "ScrollToOptions",
  "Storage",
  "SupportedType",
  "Url",
  "Window",
  "console",
]
